--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -232,6 +232,16 @@
 	note = {\\(Accessed on 2019-02-11)},
 }
 
+@book{boulding:evolutionary:economy,
+	author = {Boulding, Kenneth E.},   
+	title = {Evolutionary Economics},
+	publisher = {SAGE publications Inc},
+	month = {},
+	year = {1981},
+	edition = {first},
+	note = { }
+}
+
 % Satoshi forum posts
 https://bitcointalk.org/index.php?action=profile;u=3;sa=showPosts;start=520
 
@@ -274,6 +284,18 @@ TOR, reverse govern-print mention
 	howpublished = {
 		\url{https://www.youtube.com/watch?v=yU3Sr07Qnxg}},
 	}	
+}
+
+@article{
+	antonopoulos:segregated:witness:align:economic:incentives,
+	author = { Antonopoulos, Andreas},
+	title = { Segregated witness and aligning economic incentives with resource costs },
+	day = "8",
+	month = "August",
+	year = 2016,
+	howpublished = { 
+		\url{https://segwit.org/segregated-witness-and-aligning-economic-incentives-with-resource-costs-7d987b135c00}
+	}
 }
 
 @article{
@@ -416,7 +438,7 @@ TOR, reverse govern-print mention
 
 @misc{bip:0118:sighash:noinput,
 	author = {Decker, Christian},
-	title = "BIP 0013 SIGHASH NOINPUT",
+	title = "BIP 0118 SIGHASH NOINPUT",
 	year = "2017",
 	month = "February",
 	day = "28",
@@ -735,6 +757,19 @@ year = "",
 	year = "1977",
 	howpublished = {
 		\url{http://bioinfo.ict.ac.cn/~dbu/AlgorithmCourses/Lectures/Lec7-Johnson.pdf}
+	}
+}
+
+@book{
+	bakhtiar:floyd:warshall,
+	author = { Hasan, Bakhtiar },   
+	title = { Algorithms Notes for Professionals },
+	publisher = {},
+	month = {},
+	year = {},
+	note = { }
+	howpublished = {
+		\url{https://goalkicker.com/AlgorithmsBook}
 	}
 }
 
