--- a/docs/thesis/scaling.tex
+++ b/docs/thesis/scaling.tex
@@ -58,7 +58,9 @@ One of the earliest attempts to increase the block size was when node Bitcoin XT
 
 As figure \ref{fig:xt_nodes} attests, bitcoin XT and classic failed to receive support and is now dead. 
 
-\subsection{The bitcoin cash saga}
+\subsection{The Bitcoin Cash saga}
+
+The failures of Bitcoin Classic was just the beginning of the scaling debate. The proposal of Segregated Witness\cite{bip:0141:segwit} was met with strong opposition as it was considered an overtly complicated and risky upgrade when the block limit could simply be increased. Segregated Witness is in a way an increase in block space as it moves the unlocking script(witness) from the transaction to its own structure. Since each transaction takes up less space, more transactions fit in each block. The upgrade also addresses malleability, which many off-chain solutions require, and aligns economics incentives with resource costs\cite{antonopoulos:segregated:witness:align:economic:incentives}.
 
 \begin{itemize}
 	\item SegWit2x
@@ -69,7 +71,7 @@ As figure \ref{fig:xt_nodes} attests, bitcoin XT and classic failed to receive s
 
 \section{Removing decentralization}
 
-\section{Side channel}
+\section{Side chain}
 
 \section{Off-chain scaling}
 
