--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -395,7 +395,7 @@ TOR, reverse govern-print mention
 	note = {(Accessed on 2019-02-13)},
 }
 
-@misc{bip:uasf:segwit,
+@misc{bip:148:uasf:segwit,
 	author = {Fry, Shaolin},
 	title = {BIP 0148 Mandatory activation of segwit deployment},
 	year = "2017",
@@ -581,6 +581,52 @@ TOR, reverse govern-print mention
 	year = "2019",
 }
 
+@article{song:lightning:malleability,
+	title = {Transaction Malleability Explained},
+	author = {Song, Jimmy},
+	howpublished = { 
+		\url{https://bitcointechtalk.com/transaction-malleability-explained-b7e240236fc7} 
+	},
+	year = "2017",
+	month = "August",
+	Day = "16"
+}
+
+@article{song:asicboost,
+	title = {Examining Bitmain’s Claims about ASICBoost},
+	author = {Song, Jimmy},
+	howpublished = { 
+		\url{https://medium.com/@jimmysong/examining-bitmains-claims-about-asicboost-1d61118c678d} 
+	},
+	year = "2017",
+	month = "April",
+	Day = "10"
+}
+
+@article{bitmain:response,
+	title = {Regarding Recent Allegations and Smear Campaigns},
+	author = {Bitmain},
+	howpublished = { 
+		\url{https://blog.bitmain.com/en/regarding-recent-allegations-smear-campaigns/} 
+	},
+	year = "2017",
+	month = "April",
+	Day = "7"
+}
+
+@misc{maxwell:asicboost:fix,
+	title = {Inhibiting a covert attack on the Bitcoin POW function},
+	author = {Maxwell, Gregory},
+	howpublished = { 
+		\url{https://lists.linuxfoundation.org/pipermail/bitcoin-dev/2017-April/013996.html} 
+	},
+	year = "2017",
+	month = "April",
+	Day = "5"
+
+}
+
+
 % Lightning 
 
 @article{poon:dryja:lightning:network,
@@ -657,10 +703,24 @@ year = "",
 
 % Topology
 
-% Albert-Lászlo Réka
+@article{
+	erdos:renyi:random:graphs,
+	author = {Erdős, Paul and Rényi, Albért}, 
+	title = "On Random Graphs I.",
+	journal = "",
+	volume =  "",
+	day = "", 
+	month = "",
+	year = "",
+	page = "",
+	howpublished = {
+		\url{https://users.renyi.hu/~p_erdos/1959-11.pdf}
+	}
+}
+
 @article{
 	barabasi:albert:emergent:scaling,
-	author = {Barabasi, Albert-Laszlo and Albert, Reka}, 
+	author = {Barabasi, Albert-Lászlo and Albert, Réka}, 
 	title = "Emergence of Scaling in Random Networks",
 	journal = "Science",
 	volume =  "286",
