--- a/docs/thesis/scaling.tex
+++ b/docs/thesis/scaling.tex
@@ -56,23 +56,40 @@ One of the earliest attempts to increase the block size was when node Bitcoin XT
 	\hspace*{2mm} 	
 \end{figure}
 
-As figure \ref{fig:xt_nodes} attests, bitcoin XT and classic failed to receive support and is now dead. 
+As figure \ref{fig:xt_nodes} attests, bitcoin XT and classic failed to receive support and is now dead.
 
 \subsection{The Bitcoin Cash saga}
 
-The failures of Bitcoin Classic was just the beginning of the scaling debate. The proposal of Segregated Witness\cite{bip:0141:segwit} was met with strong opposition as it was considered an overtly complicated and risky upgrade when the block limit could simply be increased. Segregated Witness is in a way an increase in block space as it moves the unlocking script(witness) from the transaction to its own structure. Since each transaction takes up less space, more transactions fit in each block. The upgrade also addresses malleability, which many off-chain solutions require, and aligns economics incentives with resource costs\cite{antonopoulos:segregated:witness:align:economic:incentives}.
+The failures of Bitcoin Classic was just the beginning of the scaling debate. The proposal of Segregated Witness\cite{bip:0141:segwit} was met with strong opposition as it was considered an overtly complicated and risky upgrade when the block limit could simply be increased. 
 
-\begin{itemize}
-	\item SegWit2x
-\end{itemize} 
+Segregated Witness is in a way an increase in block space as it moves the unlocking script(witness) from the transaction to its own structure. Since each transaction takes up less space, more transactions fit in each block. The upgrade also addresses malleability, which many off-chain solutions require, and aligns economics incentives with resource costs\cite{antonopoulos:segregated:witness:align:economic:incentives}. Although its possible to implement Lightning without a malleability fix, it increases its viability\cite{song:lightning:malleability}.
+
+The malleability fix also addresses covert \texttt{ASICBOOST} or Antbleed. Covert \texttt{ASICBOOST} utilizes that part of \texttt{SHA256} may be pre-calculated if the last 16 bits remain the same. The last 16 bytes in the bitcoin header include the last 4 bytes of the Merkle root. By finding two Merkle Roots with the same last 4 bytes, allowing for less computation in finding hashes. To find a matching pair of roots, many roots must on average be tried. The space of viable roots is reduces if the transaction witness isn't malleable\cite{song:asicboost} as the witness can't be manipulated to change the transaction and thus the Merkle root. Gregory Maxwell alluded that \texttt{ASICBOOST} had in fact been implemented in ASIC chips and proposed a fix\cite{maxwell:asicboost:fix}. Bitmain, the largest chip manufacture, made a statement 2 days after addressing the accusation\cite{bitmain:response}. There is no way of ultimately proving if covert \texttt{ASICBOOST} was ever used\footnote{In further conversation with Bitmain representative Nishant Sharma at their headquarters in Beijing in December 2017 he stated that they would never use \texttt{ASICBOOST} of moral reasons. \texttt{ASICBOOST} was not longer viable on Bitcoin at that time, but was on Bitcoin cash and other currencies. He also stated that bitmain had been in negotiation to buy the patent from Timo Hanke and Sergio Demian Lerner and had thus filed a patent for \texttt{ASICBOOST} with the Chinese government. The deal ultimately didn't fell through, and this information is hearsay at best, but the patent sparked many rumors at that time and drove opposition and is one reason for the eventual split.}. 
+
+Segregated Witness When BIP148\cite{bip:148:uasf:segwit}, a \textit{user-activated-soft-fork} scheduled for 22 August 2017 to activate Segregated Witness, was getting traction among nodes, the opposing party(including aforementioned Bitmain) decided to hard fork bitcoin into two by raising the block size limit. The hard fork took place on the first of August 2017 and created Bitcoin Cash.
+
+Bitcoin Cash received significant economic support initially, although significantly below the original chain.
 
 
-( THIS SECTION IS OBVOUSLY NOT DONE) 
+-- Chart over price here --
+
+
+Although support for Bitcoin Cash has dwindled over the following years, it set a precedence of forks may be utilized. During the second half of 2017 many more forks happened similarly to bitcoin cash.
+
+\subsection{The SegWit2x Compromise}
+
+Most forks are simple copies of bitcoin and may be of little interest here. However SegWit2x carry some historic weight worth noting. 
+SegWit2x was originally a compromise 
+
 
 \section{Removing decentralization}
 
 \section{Side chain}
 
 \section{Off-chain scaling}
+
+(payment channels)
+
+Payment channel networks may be constructed in many different ways, a few distinct proposals has been suggested. Decker and Wattenhofer suggested a \_\_ in which \_\_ however \_\_ \cite{decker:wattenhofer:duplex}.  
 
 \section{Rational for a small blocks}
