--- a/docs/thesis/glossary.tex
+++ b/docs/thesis/glossary.tex
@@ -21,7 +21,7 @@
 		program that implements that API}}
 
 %%% define the acronym and use the see= option
-\newglossaryentry{api}{type=\acronymtype, name={API}, description={Application
+\newglossaryentry{api}{type=\acronymtype, name={Application Programming Interface}, description={Application
 		Programming Interface}, first={Application
 		Programming Interface (API)\glsadd{apig}}, see=[Glossary:]{apig}}
 
