--- a/docs/thesis/main.tex
+++ b/docs/thesis/main.tex
@@ -231,7 +231,7 @@
     \bibliography{references.bib}
 
     \begin{appendices}
-    \input{routing_fee}
+%    \input{routing_fee}
 
     \printglossary[type=main]
    
