--- a/docs/thesis/results.tex
+++ b/docs/thesis/results.tex
@@ -1,1 +1,21 @@
 \chapter{Results}
+
+
+(preferential attachment)
+
+(pricing)
+
+(funding)
+
+(open close)
+
+(degree distribution)
+(profit distribution)
+
+(re-balance channel)
+
+(combined best strategies)
+
+(is strategy set stable from invasion)
+
+(external pressures, payment pressure, routing / private channels.)
