--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -80,7 +80,6 @@
 	journal =  "Journal of the Statistical Society of London",
 	volume = {33},
 	number = "2",
-	year = "1892",
 	howpublished = {\url{https://www.jstor.org/stable/2338715?read-now=1&seq=1#page_scan_tab_contents}},
 	pages = {216-242},
 	DOI = "10.2307/2338715"
@@ -167,8 +166,9 @@
 	roosevelt:6102,
 	author = {Roosevelt, Franklin D.},
 	title = "Executive order 6102",
+	year = "",
 	howpublished = {
-	\url{https://en.wikipedia.org/wiki/Executive_Order_6102#/media/File:Executive_Order_6102.jpg}
+		\url{https://en.wikipedia.org/wiki/Executive_Order_6102#/media/File:Executive_Order_6102.jpg}
 	},	
 }
 
@@ -180,8 +180,8 @@
 	month = "January",
 	day = "30",
 	howpublished = {
-	\url{	http://legisworks.org/congress/73/publaw-87.pdf}
-	},	
+		\url{http://legisworks.org/congress/73/publaw-87.pdf}
+	},
 }
 
 @book{
@@ -386,7 +386,7 @@ TOR, reverse govern-print mention
 % Bitcoin - Bips
 
 @misc{bip:0141:segwit,
-	author = {Lombrozo, Eric; Lau, Johnson; Wuille, Pieter},
+	author = {Lombrozo, Eric and Lau, Johnson and Wuille, Pieter},
 	title = {BIP 0141 Segregated Witness},
 	year = "2015",
 	month = "December",
@@ -827,7 +827,7 @@ year = "",
 	publisher = {},
 	month = {},
 	year = {},
-	note = { }
+	note = { },
 	howpublished = {
 		\url{https://goalkicker.com/AlgorithmsBook}
 	}
