bit on the random degree expantion

--- a/docs/thesis/lightning.tex
+++ b/docs/thesis/lightning.tex
@@ -260,7 +260,7 @@ Note that key generation and disclosure may be used for $HTLC$ in the same manne
 	\caption{\textit{
 			Shows the state of transactions after Alice and Bob have agreed to a new Commitment Transaction $CT_{A3}$, $CT_{B3}$. 
 			The transactions to the left side can be broadcast by Alice and the ones to the right by Bob. With the signing of the new $CT$s
-			Bob and Alice disclose keys for $BRT_{AH1}$, $BRT_{AH2}$, $BRT_{BH1}$, $BRT_{AH2}$ as penalty if an old commitment transaction is broadcast.
+			Bob and Alice disclose keys for $BRT_{AH1}$, $BRT_{AH2}$, $BRT_{BH1}$, $BRT_{BH2}$ as penalty if an old commitment transaction is broadcast.
 		}}
 \end{figure}
 \newpage
