--- a/docs/thesis/evaluation.tex
+++ b/docs/thesis/evaluation.tex
@@ -145,7 +145,7 @@ compared to Erdős–Rényi which is binomial
 
 as follows from definition as ${n-1 \choose k}$ are all possible combinations of k edges,  $p^k$ the probability of any combination taking place and $p^k(1-p)^{n-1-k}$ to exclude combinations of larger degree $k$.
 
-Thus adding a age bias causes the characteristics of the degree distribution to change as seen in Figure L.
+Thus adding an age bias causes the characteristics of the degree distribution to change as seen in Figure L.
 
 \begin{figure}[!htb]
 		\hspace*{-0.5cm} 
@@ -157,11 +157,17 @@ Thus adding a age bias causes the characteristics of the degree distribution to 
 		\hspace*{2mm} 
 \end{figure}
 
-A more appropriate random model may be to consider $G_{n,E}$ where each time step $t$ a vertex is added to the graph and is connected with $m$ previous vertices and creates and edges when t < n. The probability of any previous vertex i being selected is thus $p_i = \dfrac{m}{t_i}$. 
+A more appropriate random model may be to consider $G_{n,m}$ where each time step $t$ a vertex is added to the graph and is connected with $m$ previous vertices and creates and edges when t < n. The probability of any previous vertex $i$ being selected is thus $p_i = \dfrac{m}{t_i}$. 
 As a node is not part of LN before edges are made, it reasonable to assume a node creates edges as part of joining the network.
+The degree distribution follows from definition
 
-%DEGREE of my random 
-\[ p(k) =  n! * (n-k)*\dfrac{m}{k} \]
+\[p(k) =  \begin{cases}
+& \prod_{i=1}^{k}\sum_{j=k}^{n}m\dfrac{n-j}{n^2},~\text{if}~m<k\\
+& 0,~~~~~~~~~~~~~~~~~~~~~~~~~\text{otherwise}
+
+\end{cases} \]
+
+\[ \prod_{i=1}^{k}\sum_{j=k}^{n}m\dfrac{n-j}{n^2} \sim m(\dfrac{1}{2})^k\]
 
 \subsection{Scale free models}
 
